# vpncbar-linux

./: .gitignore  Cargo.toml  README.md  build.sh  install.sh  uninstall.sh
.cargo/: config.toml
packaging/: 10-vpncbar.rules  io.github.vpncbar.desktop  vpncbar-disconnect  vpncbar-script  vpncbar-setup  vpncbar.desktop
src/: app.rs  config_import.rs  main.rs  model.rs  notify.rs  pidfd.rs  privilege.rs  secrets.rs  sys.rs  tray.rs  tray_icon.rs  tunnel.rs
src/backend/: mod.rs  openconnect.rs  vpnc.rs
src/ui/: about.rs  editor.rs  mod.rs  otp.rs  window.rs
