[package]
name = "vpncbar-linux"
version = "1.3.1"
edition = "2021"
description = "A tray front-end for vpnc (Cisco IPSec) and openconnect (AnyConnect SSL) on Linux/Wayland"
license = "GPL-2.0-or-later"

[[bin]]
name = "vpncbar"
path = "src/main.rs"

[profile.release]
strip = true        # drop the symbol table (file said "not stripped")
lto = true          # cross-crate inlining + dead-code elimination
codegen-units = 1   # one unit: better dedup/optimization, slower compile

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
# StatusNotifierItem tray (D-Bus / SNI + DBusMenu).
# blocking feature: we drive our own thread, not a tokio runtime (GTK/glib app).
ksni = { version = "0.3", default-features = false, features = ["blocking", "async-io"] }
# desktop notifications (org.freedesktop.Notifications)
notify-rust = "4"
# cross-thread channel feeding the glib main loop
async-channel = "2"
# GTK4 UI + glib main loop
gtk = { package = "gtk4", version = "0.9", features = ["v4_10"] }
log = "0.4"
env_logger = "0.11"
# pidfd_open(2) for event-driven tunnel-drop detection (no /proc polling)
libc = "0.2"
